Changelog for mk-archiver:

2008-06-02: version 1.0.9

   * Updated common code.

2008-03-16: version 1.0.8

   * Added --setvars option (bug #1904689, bug #1911371).
   * Added --charset option (bug #1877548).
   * Changed short form of --analyze to -Z to avoid conflict with --charset.

2008-01-24: version 1.0.7

   * Added --quiet option.
   * Added --plugin option.  The plugin interface is not backwards compatible.
   * Added --bulkins option.
   * Added --bulkdel option.
   * Added --nodelete option.
   * Changed negatable --ascend option to --noascend.

2008-01-05: version 1.0.6

   * Made suffixes for time options optional (bug #1858696).

2007-12-16: version 1.0.5

   * Updated common code.

2007-12-07: version 1.0.4

   * Updated common code.

2007-11-12: version 1.0.3

   * The --no-ascend option caused too many bind variables to be used.

2007-11-04: version 1.0.2

   * Made command-line help easier to use.
   * Removed the dependency on Term::ReadKey.
   * Replaced some code with modules that are unit-tested.
   * You can control binary logging with the 'a' and 'b' options in a DSN.
   * Destination plugins can now rewrite the INSERT statement.

2007-08-23: version 1.0.1

   * MySQL socket connection option didn't work.
   * Added --askpass option.

2007-07-26: version 1.0.0

   * Added --safeautoinc option, enabled by default, to protect against re-using
     auto-increment values.

2007-07-20: version 0.9.4

   * Made --time suffix optional.
   * Added --statistics option to gather and print timing statistics.
   * Added signal handling so mk-archiver exits cleanly when it can.
   * Changed exit status to 0 when --help is given.
   * Out-of-column-order primary keys were not ascended correctly.

2007-06-22: version 0.9.3

   Changes:
   * Added more hooks for plugins before and after archiving.
   * Documentation.
   * Made --time suffix optional.

   Bugs fixed:
   * mk-archiver could crash on a lock wait timeout when --txnsize was not set
